--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,3 +1,9 @@
+.page-header {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #ececec;
+}
+
 .page-header__block,
 .page-header__nav {
   display: flex;
