--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,20 +2,21 @@
 @import "./utils/variables";
 @import "./base/container";
 @import "./base/common";
+@import "./base/section";
 @import "./components/botton";
 @import "./components/logo";
 @import "./components/heading";
 @import "./components/icon";
 @import "./components/modal";
 @import "./components/form";
+@import "./components/filter";
+@import "./components/img";
 @import "./layouts/header";
 @import "./layouts/hero";
-@import "./layouts/section";
 @import "./layouts/features";
 @import "./layouts/activities";
 @import "./layouts/team";
 @import "./layouts/clients";
 @import "./layouts/footer";
-@import "./portfolio/header";
-@import "./portfolio/button";
-@import "./portfolio/img";
+
+
