--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,4 +6,8 @@
   --background-secondary-color: #2f303a;
   --background-grey-color: #f5f4fa;
   --icon-grey-color: #afb1b8;
+
+  --font-family: Roboto, sans-serif;
+  --font-weight: 400;
+  --letter-spacing: 0.01em;
 }
