--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,9 @@ summary {
   --background-secondary-color: #2f303a;
   --background-grey-color: #f5f4fa;
   --icon-grey-color: #afb1b8;
+  --font-family: Roboto, sans-serif;
+  --font-weight: 400;
+  --letter-spacing: 0.01em;
 }
 
 .container {
@@ -283,7 +286,9 @@ summary {
 body {
   background-color: var(--primary-white-colour);
   color: var(--primary-text-colour);
-  font-family: Roboto, sans-serif;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight);
+  letter-spacing: var(--letter-spacing);
 }
 
 img {
@@ -296,6 +301,16 @@ img {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.section-no-padding {
+  padding-top: 0;
+  padding-bottom: 94px;
 }
 
 .button {
@@ -444,10 +459,8 @@ img {
 }
 
 .form__content {
-  font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.01em;
   color: var(--primary-text-colour);
 }
 
@@ -510,10 +523,8 @@ img {
 }
 
 .form__textarea::placeholder {
-  font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
@@ -555,7 +566,6 @@ img {
 }
 
 .form-field__text {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -576,6 +586,131 @@ img {
 
 .submit__button:focus, .submit__button:hover {
   background-color: #188ce8;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.btn__item {
+  margin-right: 8px;
+}
+
+.btn__item:last-child {
+  margin-right: 0;
+}
+
+.btn__link {
+  border-radius: 4px;
+  padding: 6px 22px;
+  border: none;
+  background-color: #f5f4fa;
+  color: var(--title-text-colour);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn__link:hover, .btn__link:focus {
+  background-color: var(--accent-text-colour);
+  color: var(--primary-white-colour);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.portfolio-ection {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
+}
+
+.portfolio-ection__item {
+  flex-basis: calc((100% - 90px) / 3);
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+
+.portfolio-ection__card {
+  text-decoration: none;
+}
+
+.card {
+  width: 370px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-ection__card:hover .card,
+.portfolio-ection__card:focus .card {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.card__img {
+  position: relative;
+  overflow: hidden;
+}
+
+.card__block {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-ection__card:hover .card__block,
+.portfolio-ection__card:focus .card__block {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.card__content {
+  margin: 0;
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-colour);
+}
+
+.card__meta {
+  border: 1px solid #eee;
+  border-top: none;
+  padding: 24px 20px;
+}
+
+.card__title {
+  margin-top: 0;
+  margin-bottom: 4px;
+  color: var(--title-text-colour);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.card__text {
+  margin: 0;
+  color: var(--primary-text-colour);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+}
+
+.page-header {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #ececec;
 }
 
 .page-header__block,
@@ -704,16 +839,6 @@ img {
   padding: 10px 32px;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.section-no-padding {
-  padding-top: 0;
-  padding-bottom: 94px;
-}
-
 .feature {
   display: flex;
 }
@@ -767,7 +892,6 @@ img {
 .feature__text {
   margin-top: 0;
   margin-bottom: 0;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -847,7 +971,6 @@ img {
 .caption__text {
   margin-bottom: 16px;
   margin-top: 0;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -916,7 +1039,6 @@ img {
   margin-bottom: 0;
   color: var(--primary-white-colour);
   font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -929,7 +1051,6 @@ img {
 .address__link {
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -991,7 +1112,6 @@ img {
 }
 
 .footer__input::placeholder {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
@@ -1008,130 +1128,5 @@ img {
 .button__icon {
   margin-left: 10px;
   fill: currentColor;
-}
-
-.page-header--line {
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: #ececec;
-}
-
-.btn {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
-.btn__item {
-  margin-right: 8px;
-}
-
-.btn__item:last-child {
-  margin-right: 0;
-}
-
-.btn__link {
-  border-radius: 4px;
-  padding: 6px 22px;
-  border: none;
-  background-color: #f5f4fa;
-  color: var(--title-text-colour);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  letter-spacing: 0.03em;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.btn__link:hover, .btn__link:focus {
-  background-color: var(--accent-text-colour);
-  color: var(--primary-white-colour);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.portfolio-ection {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-bottom: -30px;
-}
-
-.portfolio-ection__item {
-  flex-basis: calc((100% - 90px) / 3);
-  margin-left: 30px;
-  margin-bottom: 30px;
-}
-
-.portfolio-ection__card {
-  text-decoration: none;
-}
-
-.card {
-  width: 370px;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-ection__card:hover .card,
-.portfolio-ection__card:focus .card {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.card__img {
-  position: relative;
-  overflow: hidden;
-}
-
-.card__block {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
-  background: rgba(33, 150, 243, 0.9);
-  transform: translateY(100%);
-  opacity: 0;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-ection__card:hover .card__block,
-.portfolio-ection__card:focus .card__block {
-  transform: translateY(0);
-  opacity: 1;
-}
-
-.card__content {
-  margin: 0;
-  padding: 63px 24px;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.6;
-  letter-spacing: 0.03em;
-  color: var(--primary-white-colour);
-}
-
-.card__meta {
-  border: 1px solid #eee;
-  border-top: none;
-  padding: 24px 20px;
-}
-
-.card__title {
-  margin-top: 0;
-  margin-bottom: 4px;
-  color: var(--title-text-colour);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-}
-
-.card__text {
-  margin: 0;
-  color: var(--primary-text-colour);
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
 }
 /*# sourceMappingURL=main.css.map */
